[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "PyQEA"
version = "0.1.1"
authors = [
  { name="Fernando Wanguemert", email="f.wguerra@outlook.com" },
]
description = "General use optimizer for non-convex cost functions with non-linear constraints"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ferwanguer"
"Bug Tracker" = "https://github.com/ferwanguer/Quantum_Inspired_Optimizer/issues"